# ryokan

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  msrv.yml
src/: args.rs  config.rs  error.rs  file.rs  file_manager.rs  main.rs  metadata.rs  note.rs  note_database.rs  note_manager.rs  pin.rs  pin_manager.rs  tui.rs
src/pin/: pin_test.rs
