[package]
name = "ryokan"
version = "0.0.1"
edition = "2024"
categories = ["command-line-utilities"]
keywords = ["cli", "tui", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/ryokan"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
crossterm = "0.29.0"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
ratatui = "0.29.0"
rpassword = "7.4.0"
serde = "1.0.228"
serde_derive = "1.0.210"
serde_json = "1.0.140"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.7"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
