[package]
name = "ryokan"
version = "0.0.1"
edition = "2024"
categories = ["command-line-utilities"]
keywords = ["cli", "tui", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/ryokan"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
crossterm = "0.29.0"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
log = "0.4.29"
rand = "0.8.5"
ratatui = "0.30.0"
rpassword = "7.4.0"
serde = "1.0.228"
serde_derive = "1.0.210"
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.0", features = ["v4", "fast-rng"] }
