[package]
name = "ryokan"
version = "0.0.1"
edition = "2024"
categories = ["command-line-utilities"]
keywords = ["cli", "tui", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/ryokan"
rust-version = "1.88.0"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
aead = "0.6.1"
aes-gcm = "0.10.3"
argon2 = "0.6.0-rc.8"
crossterm = "0.29.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.11"
log = "0.4.33"
rand = "0.10.1"
ratatui = "0.30.2"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2"
toml = "1.1.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4", "fast-rng"] }
zeroize = { version = "1.9.0", features = ["derive"] }
